增加token生成与校验

--- a/config/dev.yml
+++ b/config/dev.yml
@@ -3,9 +3,9 @@ server:
   mode: 'release'
 
 redis:
-  Addr: '127.0.0.1:6379'   //自己redis的ip和端口
-  password: ''            //自己redis的密码 ，一般为空没有设置密码
-  db: 0                  //默认选择0号数据库
+  Addr: '127.0.0.1:6379'   #自己redis的ip和端口
+  password: ''            #自己redis的密码 ，一般为空没有设置密码
+  db: 0                  #默认选择0号数据库
 
 mysql:
   user: root
